--- a/LundumDare/.classpath
+++ b/LundumDare/.classpath
@@ -4,5 +4,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="tiles"/>
 	<classpathentry kind="src" path="res"/>
+	<classpathentry kind="src" path="generator"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
