--- a/LundumDare/.classpath
+++ b/LundumDare/.classpath
@@ -2,8 +2,8 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="src" path="tiles"/>
 	<classpathentry kind="src" path="res"/>
 	<classpathentry kind="src" path="generator"/>
+	<classpathentry kind="src" path="objects"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
